--- a/app/src/main/res/layout/fragment_create_line.xml
+++ b/app/src/main/res/layout/fragment_create_line.xml
@@ -165,8 +165,9 @@
     <ScrollView
         android:id="@+id/scroll"
         android:layout_below="@id/top"
+        android:layout_marginBottom="30dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
