--- a/app/src/main/res/layout/fragment_profile_notifications.xml
+++ b/app/src/main/res/layout/fragment_profile_notifications.xml
@@ -8,12 +8,12 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="60dp"
-        android:background="@color/schedule_title_bg_color">
+        android:background="@mipmap/background">
 
         <ImageView
             android:id="@+id/img_close"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:src="@mipmap/btn_close" />
