--- a/app/src/main/res/layout/activity_create_appointment.xml
+++ b/app/src/main/res/layout/activity_create_appointment.xml
@@ -6,16 +6,16 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="60dp"
+        android:layout_height="54dp"
         android:background="@color/schedule_title_bg_color">
 
         <TextView
             android:layout_width="80dp"
             android:layout_height="match_parent"
-            android:text="Cancel"
+            android:text="CANCEL"
             android:id="@+id/txt_cancel"
             android:textColor="@color/button_bg"
-            android:textSize="17dp"
+            android:textSize="16sp"
             android:gravity="center_vertical|center_horizontal" />
 
         <TextView
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:text="Create Appointment"
             android:id="@+id/title"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:layout_centerInParent="true" />
     </RelativeLayout>
 
