--- a/app/src/main/res/layout/fragment_line_select_client.xml
+++ b/app/src/main/res/layout/fragment_line_select_client.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:id="@+id/top_layout"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="54dp"
         android:background="@color/schedule_title_bg_color">
 
