--- a/app/src/main/res/layout/fragment_schedule_add_activity.xml
+++ b/app/src/main/res/layout/fragment_schedule_add_activity.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -10,245 +11,259 @@
         android:background="@color/schedule_title_bg_color">
 
         <TextView
+            android:id="@+id/txt_done"
             android:layout_width="75dp"
             android:layout_height="match_parent"
+            android:gravity="center_vertical|center_horizontal"
             android:text="Done"
-            android:id="@+id/txt_done"
             android:textColor="@color/white"
-            android:textSize="17dp"
-            android:gravity="center_vertical|center_horizontal" />
+            android:textSize="17dp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add an Activity"
             android:id="@+id/txt_title"
-            android:textSize="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textIsSelectable="false" />
+            android:text="Add an Activity"
+            android:textIsSelectable="false"
+            android:textSize="18dp" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="65dp"
-        android:layout_marginTop="0dp"
-        android:id="@+id/sale_layout">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="40dp">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/icon_sales"
-            android:src="@mipmap/icon_sale_blue"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="25dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sale"
-            android:textColor="@color/schedule_title_bg_color"
-            android:textSize="20dp"
-            android:layout_toRightOf="@+id/icon_sales"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp" />
+            android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="30dp"
-            android:src="@mipmap/right_arrow"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="25dp" />
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/sale_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="65dp"
+                android:layout_marginTop="0dp">
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="0.1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginLeft="25dp" />
+                <ImageView
+                    android:id="@+id/icon_sales"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="25dp"
+                    android:src="@mipmap/icon_sale_blue" />
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="65dp"
-        android:id="@+id/schedule_layout">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="15dp"
+                    android:layout_toRightOf="@+id/icon_sales"
+                    android:text="Sale"
+                    android:textColor="@color/schedule_title_bg_color"
+                    android:textSize="20dp" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/icon_schedule"
-            android:src="@mipmap/icon_calendar_blue"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="25dp" />
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="25dp"
+                    android:src="@mipmap/right_arrow" />
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Schedule"
-            android:textColor="@color/schedule_title_bg_color"
-            android:textSize="20dp"
-            android:layout_toRightOf="@+id/icon_schedule"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp" />
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="0.1dp"
+                android:layout_marginLeft="25dp"
+                android:background="@android:color/darker_gray" />
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="30dp"
-            android:src="@mipmap/right_arrow"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="25dp" />
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/schedule_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="65dp">
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="0.1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginLeft="25dp" />
+                <ImageView
+                    android:id="@+id/icon_schedule"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="25dp"
+                    android:src="@mipmap/icon_calendar_blue" />
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="65dp"
-        android:id="@+id/client_layout">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="15dp"
+                    android:layout_toRightOf="@+id/icon_schedule"
+                    android:text="Schedule"
+                    android:textColor="@color/schedule_title_bg_color"
+                    android:textSize="20dp" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/icon_client"
-            android:src="@mipmap/icon_user_blue"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="25dp" />
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="25dp"
+                    android:src="@mipmap/right_arrow" />
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Client"
-            android:textColor="@color/schedule_title_bg_color"
-            android:textSize="20dp"
-            android:layout_toRightOf="@+id/icon_client"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp" />
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="0.1dp"
+                android:layout_marginLeft="25dp"
+                android:background="@android:color/darker_gray" />
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="30dp"
-            android:src="@mipmap/right_arrow"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="25dp" />
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/client_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="65dp">
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="0.1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginLeft="25dp" />
+                <ImageView
+                    android:id="@+id/icon_client"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="25dp"
+                    android:src="@mipmap/icon_user_blue" />
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="65dp"
-        android:id="@+id/line_layout">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="15dp"
+                    android:layout_toRightOf="@+id/icon_client"
+                    android:text="Client"
+                    android:textColor="@color/schedule_title_bg_color"
+                    android:textSize="20dp" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/icon_line"
-            android:src="@mipmap/icon_layer_blue"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="25dp" />
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="25dp"
+                    android:src="@mipmap/right_arrow" />
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Line"
-            android:textColor="@color/schedule_title_bg_color"
-            android:textSize="20dp"
-            android:layout_toRightOf="@+id/icon_line"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp" />
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="0.1dp"
+                android:layout_marginLeft="25dp"
+                android:background="@android:color/darker_gray" />
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="30dp"
-            android:src="@mipmap/right_arrow"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="25dp" />
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/line_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="65dp">
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="0.1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginLeft="25dp" />
+                <ImageView
+                    android:id="@+id/icon_line"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="25dp"
+                    android:src="@mipmap/icon_layer_blue" />
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="65dp"
-        android:id="@+id/employee_layout">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="15dp"
+                    android:layout_toRightOf="@+id/icon_line"
+                    android:text="Line"
+                    android:textColor="@color/schedule_title_bg_color"
+                    android:textSize="20dp" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/icon_employee"
-            android:src="@mipmap/icon_sale_blue"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="25dp" />
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="25dp"
+                    android:src="@mipmap/right_arrow" />
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Employee"
-            android:textColor="@color/schedule_title_bg_color"
-            android:textSize="20dp"
-            android:layout_toRightOf="@+id/icon_employee"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp" />
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="0.1dp"
+                android:layout_marginLeft="25dp"
+                android:background="@android:color/darker_gray" />
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="30dp"
-            android:src="@mipmap/right_arrow"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="25dp" />
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/employee_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="65dp">
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="0.1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginLeft="25dp" />
+                <ImageView
+                    android:id="@+id/icon_employee"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="25dp"
+                    android:src="@mipmap/icon_sale_blue" />
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="65dp"
-        android:id="@+id/goal_layout">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="15dp"
+                    android:layout_toRightOf="@+id/icon_employee"
+                    android:text="Employee"
+                    android:textColor="@color/schedule_title_bg_color"
+                    android:textSize="20dp" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/icon_goal"
-            android:src="@mipmap/icon_lists_blue"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="25dp" />
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="25dp"
+                    android:src="@mipmap/right_arrow" />
+            </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Goal"
-            android:textColor="@color/schedule_title_bg_color"
-            android:textSize="20dp"
-            android:layout_toRightOf="@+id/icon_goal"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp" />
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="0.1dp"
+                android:layout_marginLeft="25dp"
+                android:background="@android:color/darker_gray" />
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="30dp"
-            android:src="@mipmap/right_arrow"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="25dp" />
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/goal_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="65dp">
+
+                <ImageView
+                    android:id="@+id/icon_goal"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="25dp"
+                    android:src="@mipmap/icon_lists_blue" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="15dp"
+                    android:layout_toRightOf="@+id/icon_goal"
+                    android:text="Goal"
+                    android:textColor="@color/schedule_title_bg_color"
+                    android:textSize="20dp" />
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="25dp"
+                    android:src="@mipmap/right_arrow" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
